--- a/protohome.html
+++ b/protohome.html
@@ -9,7 +9,7 @@
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
-      background: #f7f7f7;
+      background: #ffead2;
       color: #222;
     }
     html {
@@ -33,7 +33,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      background: #0df6e3;
+      background: #ffead2;
       color: #0f0f1c;
       padding: 1rem 2rem;
       flex-wrap: wrap;
@@ -85,7 +85,7 @@
         flex-direction: column;
         width: 100%;
         display: none;
-        background-color: #0df6e3;
+        background-color: #ffead2;
         padding: 1rem 0;
         margin-top: 1rem;
       }
@@ -104,7 +104,7 @@
       justify-content: center;
       gap: 3rem;
       padding: 6rem 2rem;
-      background: #ffffff;
+      background: #ffead2;
       flex-wrap: wrap;
     }
     .hero-text {
@@ -129,18 +129,18 @@
       opacity: 0.9;
     }
 
-.grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-  gap: 2.5rem;
-  padding: 6rem 2rem;
-  background-color: #e6e6e6;
-background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='20'><rect x='0' y='10' width='100' height='2' fill='%230df6e3' opacity='0.1'/></svg>");
-  background-repeat: repeat;
-  background-attachment: fixed;
-  border-top: 1px solid #ccc;
-  border-bottom: 1px solid #ccc;
-}
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 2.5rem;
+      padding: 6rem 2rem;
+      background-color: #ffead2;
+      background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='20'><rect x='0' y='10' width='100' height='2' fill='%230df6e3' opacity='0.1'/></svg>");
+      background-repeat: repeat;
+      background-attachment: fixed;
+      border-top: 1px solid #ccc;
+      border-bottom: 1px solid #ccc;
+    }
     .card {
       background: #ffffff;
       border-radius: 12px;
@@ -168,9 +168,9 @@ background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/200
     }
 
     footer {
-      background: #0f0f1c;
+      background: #ffead2;
       padding: 5rem 2rem 3rem;
-      color: #aaa;
+      color: #111;
       font-size: 0.9rem;
     }
     footer a:hover {
@@ -195,9 +195,9 @@ background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/200
     .footer-bottom {
       text-align: center;
       margin-top: 3rem;
-      border-top: 1px solid #222;
+      border-top: 1px solid #999;
       padding-top: 1rem;
-      color: #555;
+      color: #444;
     }
     .newsletter-input {
       padding: 0.6rem 1rem;
@@ -355,30 +355,30 @@ background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/200
     </div>
   </footer>
 
- <script>
-  function toggleMenu() {
-    const nav = document.getElementById('site-nav');
-    nav.classList.toggle('active');
-  }
-
-  function openFlipbook(event) {
-    event.preventDefault();
-    const section = document.getElementById('latest-issue');
-    const button = document.getElementById('toggle-flipbook');
-
-    const isHidden = section.style.display === 'none' || section.style.display === '';
-
-    if (isHidden) {
-      section.style.display = 'block';
-      if (button) button.textContent = 'Hide Issue';
-      section.scrollIntoView({ behavior: 'smooth' });
-    } else {
-      section.style.display = 'none';
-      if (button) button.textContent = 'Read This Issue';
+  <script>
+    function toggleMenu() {
+      const nav = document.getElementById('site-nav');
+      nav.classList.toggle('active');
     }
-  }
 
-  document.getElementById('toggle-flipbook').addEventListener('click', openFlipbook);
-</script>
+    function openFlipbook(event) {
+      event.preventDefault();
+      const section = document.getElementById('latest-issue');
+      const button = document.getElementById('toggle-flipbook');
+
+      const isHidden = section.style.display === 'none' || section.style.display === '';
+
+      if (isHidden) {
+        section.style.display = 'block';
+        if (button) button.textContent = 'Hide Issue';
+        section.scrollIntoView({ behavior: 'smooth' });
+      } else {
+        section.style.display = 'none';
+        if (button) button.textContent = 'Read This Issue';
+      }
+    }
+
+    document.getElementById('toggle-flipbook').addEventListener('click', openFlipbook);
+  </script>
 </body>
 </html>
