--- a/protohome.html
+++ b/protohome.html
@@ -324,7 +324,7 @@ background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/200
     <a href="staffpicks.html" class="card-link">
       <div class="card">
         <img src="CS2 Keyart.jpg" alt="Staff Picks image">
-        <h3>Staff Picks</h3>
+        <h3 class="gradient-heading">Staff Picks</h3>
       </div>
     </a>
   </section>
