--- a/index.html
+++ b/index.html
@@ -346,21 +346,18 @@
       <div class="card">
         <img src="AL Cover.png" alt="Featured Stories image">
         <h3>Featured Stories</h3>
-        <p>Explore high-voltage fiction from the neon edge — a curated selection of our boldest, strangest, and most unforgettable tales.</p>
       </div>
     </a>
     <a href="bestmedia.html" class="card-link">
       <div class="card">
         <img src="NM Art.png" alt="Poll image">
         <h3>Cyberpunk Media Ranked</h3>
-        <p>We asked readers to weigh in on the most iconic games, movies, books, and art that define the cyberpunk genre.</p>
       </div>
     </a>
     <a href="staffpicks.html" class="card-link">
       <div class="card">
         <img src="CS2 Keyart.jpg" alt="Staff Picks image">
         <h3>Staff Picks</h3>
-        <p>From games to text, we've rounded up our favorite weird and wired media in the genre. These are the ones that stuck.</p>
       </div>
     </a>
   </section>
@@ -381,9 +378,9 @@
       </div>
       <div class="footer-column">
         <h4 style="color: var(--cyan);">Read</h4>
-        <p><a href="#">Neon Dystopia</a></p>
-        <p><a href="#">Future//Tense</a></p>
-        <p><a href="#">HackDust</a></p>
+        <p><a href="https://bowliopia.github.io/burnline/fiction.html">Issue 01</a></p>
+        <p><a href="https://bowliopia.github.io/burnline/fiction.html">Issue 02</a></p>
+        <p><a href="https://bowliopia.github.io/burnline/fiction.html">Issue 03</a></p>
       </div>
     </div>
     <div class="footer-bottom">
@@ -418,3 +415,4 @@
   </script>
 </body>
 </html>
+
