--- a/index.html
+++ b/index.html
@@ -305,6 +305,16 @@
 
     <div class="hero-text" style="flex: 1; max-width: 700px; display: flex; flex-direction: column;">
       <h1 class="gradient-heading">The Latest Issue</h1>
+      <h2 style="
+  font-size: 1.6rem;
+  background: linear-gradient(90deg, #0df6e3, #00a6b4);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin-top: -0.5rem;
+  margin-bottom: 1.5rem;
+">
+  Issue 01 // October 2025
+</h2>
 
       <div style="display: flex; flex-wrap: wrap; gap: 2rem; margin-top: 2rem;">
         <div style="flex: 1 1 300px;">
@@ -415,4 +425,5 @@
   </script>
 </body>
 </html>
+
 
