--- a/index.html
+++ b/index.html
@@ -304,14 +304,15 @@
     </a>
 
     <div class="hero-text" style="flex: 1; max-width: 700px; display: flex; flex-direction: column;">
-      <h1 class="gradient-heading">The Latest Issue</h1>
-      <h2 style="
+<h1 class="gradient-heading" style="margin-bottom: 2.5rem;">The Latest Issue</h1>
+
+<h2 style="
   font-size: 1.6rem;
   background: linear-gradient(90deg, #0df6e3, #00a6b4);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  margin-top: -0.5rem;
-  margin-bottom: 1.5rem;
+  margin-top: 0;
+  margin-bottom: 1rem;
 ">
   Issue 01 // October 2025
 </h2>
@@ -425,5 +426,6 @@
   </script>
 </body>
 </html>
+
 
 
