--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
 
   <section class="hero">
     <a href="#latest-issue" onclick="openFlipbook(event)">
-      <img src="Asimov Test Cover.jpg" alt="Latest issue cover" />
+      <img src="Burnline Issue 01.png" alt="Latest issue cover" />
     </a>
 
     <div class="hero-text" style="flex: 1; max-width: 700px; display: flex; flex-direction: column;">
@@ -415,6 +415,7 @@
   </script>
 </body>
 </html>
+
 
 
 
