--- a/fiction.html
+++ b/fiction.html
@@ -253,42 +253,31 @@
   </header>
 
   <section class="content">
-  <section class="hero">
-    <a href="#latest-issue" onclick="openFlipbook(event)">
-      <img src="Burnline Issue 01.png" alt="Latest issue cover" />
-    </a>
-
-    <div class="hero-text" style="flex: 1; max-width: 700px; display: flex; flex-direction: column;">
-<h1 class="gradient-heading" style="margin-bottom: 1rem;">The Latest Issue</h1>
-
-<div style="display: flex; flex-wrap: wrap; gap: 2rem; margin-top: 0.5rem;">
-  <div style="flex: 1 1 300px;">
-    <h3 style="margin-bottom: 1rem; font-size: 1.1rem; text-transform: uppercase; letter-spacing: 0.05em; color: #888;">Fiction</h3>
-    <ul style="list-style: none; padding: 0; margin: 0; color: var(--text-muted);">
-      <li style="margin-bottom: 0.75rem;"><strong>Neon Ashes</strong> by J. M. Caldwell</li>
-      <li style="margin-bottom: 0.75rem;"><strong>Chrome Dreams</strong> by Riko Ahn</li>
-      <li style="margin-bottom: 0.75rem;"><strong>The Memory Blackout</strong> by Dex Silva</li>
-      <li style="margin-bottom: 0.75rem;"><strong>Smog Season</strong> by Aliya Zhang</li>
-      <li style="margin-bottom: 0.75rem;"><strong>Datalace</strong> by T.J. Krow</li>
-    </ul>
-  </div>
-
-  <div style="flex: 1 1 300px;">
-    <h3 style="margin-bottom: 1rem; font-size: 1.1rem; text-transform: uppercase; letter-spacing: 0.05em; color: #888;">Artwork</h3>
-    <ul style="list-style: none; padding: 0; margin: 0; color: var(--text-muted);">
-      <li style="margin-bottom: 0.75rem;"><strong>Neural Bloom</strong> by Keira Vonn</li>
-      <li style="margin-bottom: 0.75rem;"><strong>Ghost Signal</strong> by M. Reyes</li>
-      <li style="margin-bottom: 0.75rem;"><strong>Synth Skin</strong> by ARTI.FX</li>
-    </ul>
-  </div>
-</div>
-
-      <div style="width: 100%; text-align: center; margin-top: 2.5rem;">
-        <button id="toggle-flipbook" class="read-issue-btn">Read This Issue</button>
+    <h1 class="gradient-heading">Original Fiction</h1>
+    <div class="story-grid" id="storyGrid">
+      <!-- Placeholder Stories -->
+      <div class="story-card">
+        <img src="Placeholder Image 1.png" alt="Story Art">
+        <h3>The Parallax Scar</h3>
+        <p>A memory broker wakes to find one of his own memories missing—and selling fast.</p>
+        <small>By Cal Venn — July 2025</small>
+      </div>
+      <div class="story-card">
+        <img src="Placeholder Image 3.png" alt="Story Art">
+        <h3>Glass Static</h3>
+        <p>What happens when the last analogue signal bleeds back into the mesh?</p>
+        <small>By El Harker — July 2025</small>
+      </div>
+      <div class="story-card">
+        <img src="Placeholder Image 6.png" alt="Story Art">
+        <h3>Vanta Drip</h3>
+        <p>Reality bends when a thief injects a prototype neural dye stolen from the spire labs.</p>
+        <small>By Xue Ren — July 2025</small>
       </div>
     </div>
-  </section>
-
+    <div class="load-more-container">
+      <button class="load-more-btn" onclick="loadMore()">Load More</button>
+    </div>
   </section>
 
   <footer>
